[metadata]
name = kpireport
version = attr: kpireport.VERSION
description = KPI report card generator
long_description = file: README.rst, CHANGELOG.rst, LICENSE.md
keywords = kpi, mail, report, devops
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    jinja2
    pandas
    python-slugify
    pyyaml
    stevedore

[options.extras_require]
all =
    kpireport-jenkins
    kpireport-mysql
    kpireport-plot
    kpireport-prometheus
    kpireport-s3
    kpireport-scp
    kpireport-sendgrid
    kpireport-slack
    kpireport-smtp
    kpireport-static

[options.entry_points]
console_scripts =
    kpireport = kpireport.__main__
