[metadata]
name = kpireport
version = attr: kpireport.VERSION
description = KPI report card generator
long_description = file: README.rst, CHANGELOG.rst
keywords = kpi, mail, report, devops
license = Prosperity Public License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: System :: Monitoring

[options]
packages = find:
install_requires =
    jinja2
    pandas
    python-slugify
    pyyaml
    stevedore

[options.extras_require]
all =
    kpireport-jenkins
    kpireport-mysql
    kpireport-plot
    kpireport-prometheus
    kpireport-s3
    kpireport-scp
    kpireport-sendgrid
    kpireport-slack
    kpireport-smtp
    kpireport-static
    kpireport-table

[options.entry_points]
console_scripts =
    kpireport = kpireport.cmd:run
