[metadata]
name = kpireport
version = attr: kpireport.VERSION
description = KPI Report generator
long_description = file: README.rst
keywords = kpi, mail, report, devops
license = Prosperity Public License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: System :: Monitoring

[options]
packages = find:
install_requires =
    authlib
    jinja2
    pandas
    python-dateutil
    python-slugify
    pyyaml
    stevedore

[options.package_data]
kpireport =
    license_keys/*.pub
    templates/*
    templates/layout/*

[options.extras_require]
all =
    kpireport-googleanalytics
    kpireport-jenkins
    kpireport-plot
    kpireport-prometheus
    kpireport-s3
    kpireport-scp
    kpireport-sendgrid
    kpireport-slack
    kpireport-smtp
    kpireport-sql
    kpireport-static
    kpireport-table
    kpireport-twitter

[options.entry_points]
console_scripts =
    kpireport = kpireport.cmd:run
