[metadata]
name = kpireport-pagerduty
version = 0.0.1
description = PagerDuty datasource and views for KPI Reporter
long_description = file: README.rst
author = KPI Reporter LLC
author_email = dev@kpireporter.com
url = https://kpireporter.com
license = Prosperity Public License

[options]
packages = find:
install_requires =
    kpireport
    kpireport-plot
    pdpyras

[options.entry_points]
kpireport.datasource =
    pagerduty = kpireport_pagerduty:PagerDutyDatasource

kpireport.view =
    pagerduty.summary = kpireport_pagerduty:PagerDutySummary
