[metadata]
name = kpireport-scp
version = 0.0.3
description = An SCP output driver for kpireporter
long_description = file: README.rst
author = KPI Reporter LLC
author_email = dev@kpireporter.com
url = https://kpireporter.com
license = Prosperity Public License

[options]
packages = find:
install_requires =
    kpireport
    kpireport-static
    fabric

[options.entry_points]
kpireport.output =
    scp = kpireport_scp:SCPOutputDriver
