[metadata]
name = kpireport-twitter
version = 0.0.1
description = A Twitter datasource for KPI Reporter
long_description = file: README.rst
author = KPI Reporter LLC
author_email = dev@kpireporter.com
url = https://kpireporter.com
license = Prosperity Public License

[options]
packages = find:
install_requires =
    kpireport
    kpireport-plot
    TwitterAPI

[options.entry_points]
kpireport.datasource =
    twitter = kpireport_twitter:TwitterDatasource

kpireport.view =
    twitter.engagement = kpireport_twitter:TwitterEngagement
